--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0"
   }
